--- a/vercel.json
+++ b/vercel.json
@@ -12,16 +12,8 @@
       "dest": "/api/index.js"
     },
     {
-      "src": "/css/(.*)",
-      "dest": "/frontend/css/$1"
-    },
-    {
-      "src": "/js/(.*)",
-      "dest": "/frontend/js/$1"
-    },
-    {
       "src": "/(.*)",
-      "dest": "/frontend/index.html"
+      "dest": "/api/index.js"
     }
   ]
 }
