--- a/package.json
+++ b/package.json
@@ -2,14 +2,22 @@
   "name": "randevu-sistemi",
   "version": "1.0.0",
   "description": "Randevu Sistemi - Full Stack Application",
+  "main": "api/index.js",
   "scripts": {
     "install-backend": "cd backend && npm install",
     "start": "cd backend && npm start",
     "dev": "cd backend && npm run dev",
     "seed": "cd backend && npm run seed"
   },
+  "dependencies": {
+    "express": "^4.18.2",
+    "mongoose": "^8.0.3",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1"
+  },
   "keywords": ["randevu", "appointment", "booking", "nodejs", "express", "mongodb"],
   "author": "",
   "license": "ISC"
 }
-
